src/test/deca/context/valid/class/class_method_overriden2.deca
/// Description:
// 	  Test of syntax when overriding a method
// 	
// Resultats:
// 	  ok
// Historique:
// 	  cree le 17/01/2023
class A {
    int x;
    void f() {}
    int y;
    void g() {}
}
class B extends A {
    int z;
    void f() {}
    void h() {}
    int p;
}